# rpi_admin

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: baseApi.js  digitalTimer.js
frontend/src/components/: digitalTimerInput.js  digitalTimerTable.js
src/: config.rs  errors.rs  lib.rs  main.rs
src/database/: mod.rs
src/database/crud/: digital_timer.rs  mod.rs
src/database/models/: digital_timer.rs  mod.rs
src/http/: digital_timer.rs  mod.rs
src/rpi/: mod.rs
src/workers/default/: digital_timer.rs
src/workers/rpi/: digital_timer.rs  worker.rs
