[package]
name = "rpi_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
chrono = { version = "0.4.23", features = ["serde"] }
envconfig = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate", "macros"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3.26"

[target.'cfg(target_arch = "armv7-unknown-linux-gnueabihf")'.dependencies]
rppal = "0.14.1"